--- a/backend_deposit/templates/payment/invoice_m10.html
+++ b/backend_deposit/templates/payment/invoice_m10.html
@@ -57,7 +57,7 @@
     border: 1px solid #000;
     padding-right: 10px;
     height: 40px;
-    background: url(https://img2.freepng.ru/20180409/zre/kisspng-debit-card-credit-card-computer-icons-bank-atm-car-atm-5acb52c642c761.6990254615232744382735.jpg) no-repeat scroll 0px 0px;
+    background: url(https://w7.pngwing.com/pngs/993/820/png-transparent-atm-card-credit-card-debit-card-visa-major-credit-cards-glyph-icon.png) no-repeat scroll 0px 0px;
     background-size: auto 100%;
 }
 
@@ -122,7 +122,7 @@
                             <label class="pay">Amount</label>
                         </div>
                         <div class="row">
-                            <div class="col-3">
+                            <div class="col-4">
                               <input class="icon_amount" style="text-indent: 30px" type="text" name="amount" placeholder="0" required="" id="id_amount" maxlength="5">
                             </div>
                             <div class="col-1" style="padding-top: 10px; margin-left: -10px">
@@ -136,7 +136,7 @@
                         <label class="pay">Card Number</label>
                         <div class="row">
                             <div class="col-8">
-                                <input class="icon_card" style="text-indent:70px;" id="id_card_number" type="text" name="card_number" required="" placeholder="0000 0000 0000 0000" minlength="16" maxlength="19" oninput="checkInput()">
+                                <input class="icon_card" style="text-indent:30px;" id="id_card_number" type="text" name="card_number" required="" placeholder="0000 0000 0000 0000" minlength="16" maxlength="19" oninput="checkInput()">
 {#                                {{ form.card_number }}#}
                             </div>
                             <div class="col-4" style="padding-right: 0px; padding-left: 0px; padding-top: 2px">
@@ -149,17 +149,15 @@
                         <div class="row">
 
                             <div class="pay">Expiration</div>
-                            <div class="col-3">
+                            <div class="col-4">
                                 <label class="pay">Month</label>
                                 <input class="icon_month"  style="text-indent:30px;" type="text" name="expired_month" placeholder="MM" minlength="2" maxlength="2" required="" id="id_expired_month">
 {#                                {{ form.expired_month }}#}
                             </div>
-                            <div class="col-3">
+                            <div class="col-4">
                                 <label class="pay">Year</label>
                                 <input class="icon_year" style="text-indent:30px;" type="text" name="expired_year" placeholder="YY" minlength="2" maxlength="2" required="" id="id_expired_year">
 {#                                {{ form.expired_year }}#}
-                            </div>
-                            <div class="col-2">
                             </div>
                             <div class="col-4">
                                 <label class="pay">CVV</label>
