--- a/backend_deposit/templates/payment/invoice_m10.html
+++ b/backend_deposit/templates/payment/invoice_m10.html
@@ -136,7 +136,7 @@
                         <label class="pay">Card Number</label>
                         <div class="row">
                             <div class="col-8">
-                                <input class="icon_card" style="text-indent:30px;" id="id_card_number" type="text" name="card_number" required="" placeholder="0000 0000 0000 0000" minlength="16" maxlength="19" oninput="checkInput()">
+                                <input class="icon_card" style="text-indent:30px; letter-spacing: 0px" id="id_card_number" type="text" name="card_number" required="" placeholder="0000 0000 0000 0000" minlength="16" maxlength="19" oninput="checkInput()">
 {#                                {{ form.card_number }}#}
                             </div>
                             <div class="col-4" style="padding-right: 0px; padding-left: 0px; padding-top: 2px">
