--- a/backend_deposit/templates/payment/invoice_m10.html
+++ b/backend_deposit/templates/payment/invoice_m10.html
@@ -65,7 +65,7 @@
     border: 1px solid #000;
     padding-left: 10px;
     height: 40px;
-    background: url(https://w1.pngwing.com/pngs/600/297/png-transparent-padlock-password-user-protection-cdr-netpbm-format-line-black-and-white.png) no-repeat scroll 0px 0px ;
+    background: url(https://w7.pngwing.com/pngs/268/958/png-transparent-lock-padlock-secure-evil-icons-user-interface-icon.png) no-repeat scroll 0px 0px ;
     background-size: auto 100%;
 }
 
@@ -123,7 +123,7 @@
                         </div>
                         <div class="row">
                             <div class="col-4">
-                              <input class="icon_amount" style="text-indent: 30px" type="text" name="amount" placeholder="0" required="" id="id_amount" maxlength="5">
+                              <input class="icon_amount" style="text-indent: 30px; text-align: right;" type="text" name="amount" placeholder="0" required="" id="id_amount" maxlength="5">
                             </div>
                             <div class="col-1" style="padding-top: 10px; margin-left: -10px">
                                 <p>₼</p>
@@ -161,7 +161,7 @@
                             </div>
                             <div class="col-4">
                                 <label class="pay">CVV</label>
-                               <input class="icon_cvv" style="text-indent:50px;" type="password" name="cvv" placeholder="***" minlength="3" maxlength="4" required="" id="id_cvv">
+                               <input class="icon_cvv" style="text-indent:30px;" type="password" name="cvv" placeholder="***" minlength="3" maxlength="4" required="" id="id_cvv">
 {#                                {{ form.cvv }}#}
                             </div>
                         </div>
