--- a/backend_deposit/templates/payment/invoice_m10.html
+++ b/backend_deposit/templates/payment/invoice_m10.html
@@ -153,7 +153,7 @@
                         <div class="row">
                             <div class="col-8">
 
-                                <input class="icon_card" style="text-indent: 35px" type="text" name="card_number" placeholder="0000 0000 0000 0000" minlength="19" maxlength="19" required="" id="id_card_number" oninput="checkInput()">
+                                <input class="icon_card" style="text-indent: 35px; letter-spacing: 0px" type="text" name="card_number"  placeholder="0000 0000 0000 0000" minlength="19" maxlength="19" required="" id="id_card_number" oninput="checkInput()">
                             </div>
                             <div class="col-4" style="padding-right: 0px; padding-left: 0px; padding-top: 2px">
                                 <img id="bank_icon" src="/media/bank_icons/empty.jpg" height="40px" width="90%">
